<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_home"
        android:title="@string/nav_home" />

    <item
        android:id="@+id/nav_leaderboard"
        android:icon="@android:drawable/star_on"
        android:title="@string/nav_leaderboard" />

    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/ic_profile"
        android:title="@string/nav_profile" />

    <item
        android:id="@+id/nav_challenges"
        android:icon="@drawable/ic_achievement_star"
        android:title="@string/challenges_title" />

    <item
        android:id="@+id/nav_notifications"
        android:icon="@drawable/ic_notifications"
        android:title="@string/nav_notifications" />
</menu>
